Port blueprint admission queue records to Java 8